--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,30 +2,36 @@
 # See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
+  build_and_push:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
+      - image: cimg/base:stable
     steps:
-      # Checkout the code as the first step.
       - checkout
+      - setup_remote_docker
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Build production images
+          command: |
+            docker build -t ${DOCKER_ID}/multi-client ./client
+            docker build -t ${DOCKER_ID}/multi-nginx ./nginx
+            docker build -t ${DOCKER_ID}/multi-server ./server
+            docker build -t ${DOCKER_ID}/multi-worker ./worker
+      - run:
+          name: Login to Docker Hub
+          command: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+      - run:
+          name: Push images to Docker Hub
+          command: |
+            docker push ${DOCKER_ID}/multi-client
+            docker push ${DOCKER_ID}/multi-nginx
+            docker push ${DOCKER_ID}/multi-server
+            docker push ${DOCKER_ID}/multi-worker
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  build_and_deploy:
     jobs:
-      - say-hello
+      - build_and_push:
+          filters:
+            branches:
+              only: main
